webview verwenden, bugfixes, appveyor einsetzen

--- a/src/statics/webview.html
+++ b/src/statics/webview.html
@@ -1,22 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <style>
-      @media print {
-        .noprint * {
-          display: none;
-          height:0;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <script>
-      ipc()
-    </script>
-    <div id="content" contenteditable="false">
-      <svelte></svelte>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><style>@media print{.noprint *{display:none;height:0;}}</style></head><body><script>ipc()</script><div id="content" contenteditable="false"><svelte></svelte></div></body></html>
